Added JWT generation and decryption
