# structs/jwt_token.go
@@ -1,0 +1,5 @@
+package structures
+
+type JWTToken struct {
+	AccessToken string
+}
